# kafkatui

./: Cargo.toml  docker-compose.yml
src/: app.rs  event.rs  logging.rs  main.rs  tui.rs  ui.rs
