[package]
name = "kafkatui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
color-eyre = "0.6.2"
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
kafka = "0.10.0"
ratatui = "0.26.2"
rustfmt = "0.10.0"
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = "0.7.10"
